# WODbottom

./: .gitignore  CITATION.cff  README.md  demo-output.html  faq.html  genindex.html  gitcollab.html  github.html  gitorg.html  index.html  installation.html  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  template_project.html
.github/workflows/: docs.yml  docs_deploy.yml.disabled  pypi.yml  tests.yml
WODbottom/: plotters.py  readers.py  tools.py  utilities.py  writers.py
_modules/: index.html
_modules/template_project/: plotters.html  tools.html  writers.html
_sources/: demo-output.ipynb.txt
docs/source/: WODbottom.rst  conf.py  index.rst  project_structure.md  setup.md  style_guide.md
notebooks/: demo.ipynb
tests/: test_tools.py
