[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "WODbottom"
description = "Extracting bottom properties from World Ocean Database"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Eleanor Frajka-Williams", email = "eleanorfrajka@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://github.com/eleanorfrajka/WODbottom"
urls.homepage = "https://github.com/eleanorfrajka/WODbottom"
urls.repository = "https://github.com/eleanorfrajka/WODbottom"

[tool.setuptools.packages.find]
where = ["."]
include = ["WODbottom"]

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "WODbottom/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "."
fallback_version = "0.0.1"

[tool.check-manifest]
ignore = [
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
  "tests",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
  "D",       # pydocstyle
  "E",       # pycodestyle errors
  "F",       # pyflakes errors
  "W",       # pycodestyle warnings
  "C90",     # mccabe complexity
  "ANN",     # type annotations
  "B",       # flake8-bugbear
  "BLE",     # bleach checks
  "TRY",     # tryceratops
  "ARG",     # flake8-arguments
  "SLF",     # flake8-self
]
ignore = [
  "D107",    # missing docstring in __init__
  "D203",    # 1 blank line required before class docstring
  "D213",    # multi-line summary docstring style
  "D401",    # first line should be in imperative mood
  "E501",    # line‑length
  "PLR0913", # too many arguments
  "C901",    # complexity
]
